[package]
name = "smrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "*"
clap = "3.2.21"
bio = "0.25.0"
itertools = "*"
rand = "0.8.5"
statrs = "0.15.0"
intervaltree = "*"
csv = "*"
approx = "*"
fishers_exact = "*"
cached = "*"
longshot = { path = "../longshot" }
logaddexp = "*"
